--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -18,7 +18,7 @@ header {
     background-color: #f5ba13;
     background-image: url("https://www.transparenttextures.com/patterns/clean-gray-paper.png");
     margin: auto -16px;
-    padding: 16px 32px;
+    padding: 10px 32px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
 
@@ -125,9 +125,14 @@ form.create-note button {
 .form-register {
     position: relative;
     width: 480px;
-    margin: 1% auto 20px auto;
+    margin: 10% auto 20px auto;
     padding: 15px;
     text-align: center;
+    /* border-radius: 2%;
+    box-shadow: 0 2px 5px #b6b5b5ab;
+    background: rgba(245, 186, 19, 0.4);
+    background-image: url("https://www.transparenttextures.com/patterns/clean-gray-paper.png"); */
+    
 }
 
 .form-heading {
